# photoprism-python

./: .editorconfig  .gitignore  LICENSE  README.md  pyproject.toml
photoprism/: __init__.py  client.py  exceptions.py  session.py
photoprism/api/: __init__.py  albums.py  base.py  config.py  errors.py  faces.py  files.py  labels.py  library.py  photos.py
photoprism/models/: base.py  config.py  customize.py  entity.py  env.py  form.py  query.py  search.py
